added socket.io and table for admins

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,9 @@
     --primary-foreground: 210 40% 98%;
 
     --success:116 76% 37%;
+    --warning:45 100% 50%;
+    --info:210 70% 50%;
+
     
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
