--- a/app/globals.css
+++ b/app/globals.css
@@ -75,6 +75,24 @@ html,body {
   height: 100%;
   direction: rtl
 }
+
+::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	background-color: rgb(25, 25, 77);
+	border: 2px solid #555555;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-track
+{
+
+	background-color: #fff;
+}
  
 @layer base {
   * {
